[package]
name = "true-crab-utils"
version = "0.1.0"
edition = "2021"
authors = ["Vladan Gojgic <v.gojgic@gmail.com>"]
description = "A collection of algorithms and data structures implemented in Rust."
license = "MIT"
repository = "https://github.com/vgprod/true-crab-utils"

[lib]
name = "true-crab-utils"
path = "src/lib.rs"

[dependencies]
